--- a/app/globals.css
+++ b/app/globals.css
@@ -173,3 +173,16 @@ button {
 .slim-scrollbar::-webkit-scrollbar-track {
   background-color: transparent;
 }
+
+/* Hide arrows in Chrome, Safari, Edge, Opera */
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Hide arrows in Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
