feat: enhance About page with new styles and animations
- Updated the Next.js configuration to include 'i.pravatar.cc' in remote image patterns.
- Added a new gradient text style in globals.css.
- Improved the AboutUsHero component layout and added background gradients for better visual appeal.
- Refactored the OurTeam component for better structure and added responsive design elements.
- Enhanced the timeline section with GSAP animations for smoother transitions and interactions.
- Updated testimonial avatars for better representation.
- Removed the unused AboutLayout component to streamline the About page structure.

--- a/app/globals.css
+++ b/app/globals.css
@@ -368,6 +368,16 @@ input[type='number'] {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+.gradient-text-3 {
+  background: linear-gradient(
+    273deg,
+    rgba(167, 249, 80, 0.5) 13.84%,
+    #3ae6b2 73.28%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
 /* About Timeline Card's Background gradient for images */
 .my-gradient-box {
@@ -377,6 +387,7 @@ input[type='number'] {
 /* Background Images for the three Timeline Cards  */
 .time-card-background-image-one {
   background-image: url('/landing/about/Abstract_01.png');
+  background-color: #101010;
 }
 .time-card-background-image-two {
   background-image: url('/landing/about/Abstract_02.png');
