feat(components): Implement dynamic ProjectCard with conditional   rendering and styles.

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @custom-variant dark (&:is(.dark *));
 
 /* Custom scrollbar styles for comment modal */
@@ -70,6 +70,15 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --color-office-brown: var(--office-brown);
+  --color-office-brown-darker: var(--office-brown-darker);
+  --color-warning-orange: var(--warning-orange);
+  --color-warning-orange-darker: var(--warning-orange-darker);
+  --color-blue-ish: var(--blue-ish);
+  --color-blue-ish-darker: var(--blue-ish-darker);
+  --color-success-green: var(--success-green);
+  --color-success-green-darker: var(--success-green-darker);
+  --color-error-status: var(--error-status);
 
   /* Custom breakpoints for 4K screens */
   --breakpoint-4xl: 2560px;
@@ -113,6 +122,15 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --office-brown: #e4dbdb;
+  --office-brown-darker: #645d5d;
+  --warning-orange: #fbe2b7;
+  --warning-orange-darker: #ad6f07;
+  --blue-ish: #c6ddf7;
+  --blue-ish-darker: #034592;
+  --success-green: #b5e3c4;
+  --success-green-darker: #04802e;
+  --error-status: #034592;
 }
 
 .dark {
@@ -147,6 +165,15 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+  --office-brown: #645d5d;
+  --office-brown-darker: #e4dbdb;
+  --warning-orange: #ad6f07;
+  --warning-orange-darker: #fbe2b7;
+  --blue-ish: #034592;
+  --blue-ish-darker: #c6ddf7;
+  --success-green: #04802e;
+  --success-green-darker: #b5e3c4;
+  --error-status: #034592;
 }
 
 @layer base {
@@ -196,7 +223,9 @@ input[type='number'] {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
+.font-inter {
+  font-family: 'Inter', sans-serif;
+}
 /* Dropdown menu item animations */
 @keyframes dropdownItemSlideIn {
   from {
